fixing mobile overlapping

--- a/src/style_sheets/Project.css
+++ b/src/style_sheets/Project.css
@@ -11,10 +11,11 @@
    margin-left: 30px;
    margin-right: 10px;
    margin-top: -20px;
+   margin-bottom: 1000px;
    padding: 20px;
    border-radius: 20px;
    max-height: 700px;
-   margin-bottom: 50px;
+
 }
 
 .body-text > p {
